--- a/ACE-MQ/ace-mq.yaml
+++ b/ACE-MQ/ace-mq.yaml
@@ -61,6 +61,8 @@ spec:
           name: console
         - containerPort: 7800
           name: http
+        - containerPort: 7080
+          name: http2
         - containerPort: 9443
           name: mqconsole
         resources:
@@ -87,6 +89,9 @@ spec:
   - protocol: TCP
     port: 7800
     name: http
+  - protocol: TCP
+    port: 7080
+    name: http2
   - protocol: TCP
     port: 9443
     name: mqconsole
@@ -121,6 +126,22 @@ spec:
     weight: 100
   port:
     targetPort: http
+  wildcardPolicy: None
+
+---
+
+kind: Route
+apiVersion: route.openshift.io/v1
+metadata:
+  name: acemq-http2
+  namespacemq: ibmpoc
+spec:
+  to:
+    kind: Service
+    name: acemq
+    weight: 100
+  port:
+    targetPort: http2
   wildcardPolicy: None
 
 ---
