--- a/ACE-MQ/ace-mq.yaml
+++ b/ACE-MQ/ace-mq.yaml
@@ -9,6 +9,40 @@ data:
   MQ_QMGR_NAME: "QMGR"
   ACE_ENABLE_METRICS: "true"
 
+
+---
+
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: ace-pv
+spec:
+  capacity:
+    storage: 10Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: nfs02
+  nfs:
+    path: /nfs/IntegrationBus/
+    server: 10.50.8.114
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: ace-pvc
+spec:
+  accessModes:
+    - ReadWriteMany
+  volumeMode: Filesystem
+  resources:
+    requests:
+      storage: 10Gi
+  storageClassName: nfs02
+  
+
 ---
 
 
@@ -31,9 +65,16 @@ spec:
     spec:
       imagePullSecrets:
         - name: external-registry
+      volumes:
+        - name: ace
+          persistentVolumeClaim:
+            claimName: ace-pvc
       containers:
       - name: acemq
         image: fxnaranjom/pocibmace:1
+        volumeMounts:
+        - mountPath: "/etc/IntegrationBus/"
+          name: ace
         env:
           - name: LICENSE
             valueFrom:
