--- a/ACE-MQ/ace-mq.yaml
+++ b/ACE-MQ/ace-mq.yaml
@@ -8,6 +8,7 @@ data:
   ACE_SERVER_NAME: "ACESERVER"
   MQ_QMGR_NAME: "QMGR"
   ACE_ENABLE_METRICS: "true"
+  ACE_TRUSTSTORE_PASSWORD: "020kw30"
 
 
 ---
@@ -49,6 +50,25 @@ spec:
 
 ---
 
+
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: ace-pv3
+spec:
+  capacity:
+    storage: 10Gi
+  volumeMode: Filesystem
+  accessModes:
+    - ReadWriteMany
+  persistentVolumeReclaimPolicy: Retain
+  storageClassName: nfs04
+  nfs:
+    path: /nfs/home/aceuser/initial-config
+    server: 10.50.8.114
+
+---
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
@@ -76,6 +96,21 @@ spec:
     requests:
       storage: 10Gi
   storageClassName: nfs03
+
+---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: ace-pvc3
+spec:
+  accessModes:
+    - ReadWriteMany
+  volumeMode: Filesystem
+  resources:
+    requests:
+      storage: 10Gi
+  storageClassName: nfs04
   
 
 ---
@@ -107,6 +142,9 @@ spec:
         - name: ace2
           persistentVolumeClaim:
             claimName: ace-pvc2
+        - name: ace3
+          persistentVolumeClaim:
+            claimName: ace-pvc3
       containers:
       - name: acemq
         image: fxnaranjom/pocibmace:1
@@ -115,6 +153,8 @@ spec:
           name: ace
         - mountPath: "/Traces/"
           name: ace2
+        - mountPath: "/home/aceuser/initial-config"
+          name: ace3
         env:
           - name: LICENSE
             valueFrom:
@@ -136,6 +176,11 @@ spec:
               configMapKeyRef:
                 name: acemq-config
                 key: MQ_QMGR_NAME
+          - name: ACE_TRUSTSTORE_PASSWORD
+            valueFrom:
+              configMapKeyRef:
+                name: acemq-config
+                key: ACE_TRUSTSTORE_PASSWORD
         imagePullPolicy: Always
         ports:
         - containerPort: 7600
