--- a/ACE-MQ/ace-mq.yaml
+++ b/ACE-MQ/ace-mq.yaml
@@ -9,6 +9,7 @@ data:
   MQ_QMGR_NAME: "QMGR"
   ACE_ENABLE_METRICS: "true"
   ACE_TRUSTSTORE_PASSWORD: "020kw30"
+  ACE_KEYSTORE_PASSWORD: "020kw30"
 
 
 ---
@@ -181,6 +182,11 @@ spec:
               configMapKeyRef:
                 name: acemq-config
                 key: ACE_TRUSTSTORE_PASSWORD
+          - name: ACE_KEYSTORE_PASSWORD
+            valueFrom:
+              configMapKeyRef:
+                name: acemq-config
+                key: ACE_KEYSTORE_PASSWORD
         imagePullPolicy: Always
         ports:
         - containerPort: 7600
